fix dynamic filter label alignments

--- a/src/design-system/components/molecules/dynamic-filter/dynamic-filter.module.css
+++ b/src/design-system/components/molecules/dynamic-filter/dynamic-filter.module.css
@@ -67,6 +67,7 @@
     & .label {
       color: var(--color-text-default);
       font-size: 0.875rem;
+      text-align: left;
     }
 
     & .count {
@@ -95,6 +96,7 @@
     & .label {
       color: var(--color-text-default);
       font-size: 0.875rem;
+      text-align: left;
     }
 
     & .count {
